# KiraImobiliare

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  README.ro.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: admin.py  auth.py  billing.py  favorites.py  images.py  listings.py  meta.py  parking.py  scrape.py
backend/app/core/: cities.py  config.py  ratelimit.py  security.py  textutil.py
backend/app/data/cities/: bucuresti.json  cluj-napoca.json  iasi.json  oradea.json  targu-mures.json  timisoara.json
backend/app/db/: base.py  models.py
backend/app/schemas/: listing.py  meta.py
backend/app/scraping/: base.py  http.py  pipeline.py
backend/app/scraping/extractors/: address.py  heating.py  parking.py  price.py  rooms.py
backend/app/scraping/sites/: __init__.py  capital.py  imobiliare.py  lajumate.py  olx.py  publi24.py  storia.py
backend/app/services/: alerts.py  geo.py  matching.py
backend/app/worker/: jobs.py  scheduler.py
backend/tests/: conftest.py  test_alerts.py  test_api.py  test_auth_paywall.py  test_extractors.py  test_favorites.py  test_ratelimit.py  test_sites_parsing.py
backend/tools/: backfill_details.py  db_stats.py  e2e_smoke.py  fix_prices.py  geocode_zones.py  load_test.py  probe_olx_slugs.py  probe_parking.py  probe_slugs.py  reclassify_parking.py  redact_existing.py  refine_geo.py
docs/: DEPLOY.md  DEPLOY_STEP_BY_STEP.md  LAUNCH_CHECKLIST.md  SITE_RESEARCH.md
docs/promo/: poster.html  (+1 more)
frontend/: index.html  package-lock.json  package.json
(+51 files in other folders)
